==================================
Rilascio 1.70.19    del 23/02/2016
==================================

ryScript: utilizzato codemirror direttamente senza iframe.

ryBox: nuova proprietà "helper".

ryUnbound: predisposizione all'editing mediante proprietà "editmode".

==================================
Rilascio 1.70.18    del 20/02/2016
==================================

Aggiustamenti nella gestione di QVJSON.

Gestita correttamente la "setclob" per "mssql".

ryQue: aggiunta la proprietà "rows".

==================================
Rilascio 1.70.17    del 15/02/2016
==================================

Filibuster: informativa sulla privacy in Mailus.

Pluto: gestito il tasso anticipato.

==================================
Rilascio 1.70.16    del 14/02/2016
==================================

Spostata la libreria jsencrypt.js da /jsencrypt/bin/ a /rygeneral/ per evitare le policies di IIS 7 che non vogliono directory di nome "bin" (sic!).

Aggiunto il test di abilitazione dell'estensione sqlite3 in diagnostica.
Aggiunto il test di abilitazione delle estensioni SQL Server in diagnostica.

Gestito il provider mssql (usa le estensioni per SQL Server senza ODBC).

Perfezionato l'assegnmento degli _infosystem.relative.

Maestro: utilizzata la lista ryUnbound per i risultati.

Documenti JSON in uscita: gestite meglio le codifiche UTF8.

==================================
Rilascio 1.70.15    del 02/02/2016
==================================

Filibuster: aggiornato il meccanismo di sintesi vocale.

==================================
Rilascio 1.70.14    del 01/02/2016
==================================

Aggiunte funzioni diagnostiche all'installatore.

Implementato un editor di script basato su CodeMirror ma compatibile con Cambusa: rybox/ryscript.

==================================
Rilascio 1.70.13    del 17/01/2016
==================================

ryPaper (stampe): aggiunta la funzione "Dotted"; migliorata la resa PDF con le celle di tabella.
